-- V1__init_schema.sql
-- Initial schema definition for TrackWise Personal Asset Management System

-- 1. USER
CREATE TABLE "user" (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email VARCHAR(255) NOT NULL UNIQUE,
    password_hash VARCHAR(255) NOT NULL,
    first_name VARCHAR(100) NOT NULL,
    last_name VARCHAR(100) NOT NULL,
    default_currency CHAR(3) NOT NULL,
    status VARCHAR(50) NOT NULL CHECK (status IN ('ACTIVE', 'SUSPENDED', 'DELETED')),
    last_login_at TIMESTAMP,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at TIMESTAMP
);

-- 2. CATEGORY
CREATE TABLE category (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES "user"(id) ON DELETE CASCADE,
    name VARCHAR(100) NOT NULL,
    parent_id BIGINT REFERENCES category(id) ON DELETE SET NULL,
    entity_type VARCHAR(50) NOT NULL CHECK (entity_type IN ('ASSET', 'PAYMENT')),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at TIMESTAMP
);

-- 3. TAG
CREATE TABLE tag (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES "user"(id) ON DELETE CASCADE,
    name VARCHAR(50) NOT NULL,
    color VARCHAR(7), -- Hex color code e.g. '#FF5733'
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at TIMESTAMP
);

-- 4. RECURRENCE RULE
CREATE TABLE recurrence_rule (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    frequency VARCHAR(50) NOT NULL CHECK (frequency IN ('DAILY', 'WEEKLY', 'MONTHLY', 'QUARTERLY', 'ANNUALLY', 'CUSTOM')),
    interval INT NOT NULL DEFAULT 1,
    start_date DATE NOT NULL,
    end_date DATE,
    next_occurrence DATE NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

-- 5. ASSET
CREATE TABLE asset (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES "user"(id) ON DELETE CASCADE,
    name VARCHAR(255) NOT NULL,
    description TEXT,
    category_id BIGINT REFERENCES category(id) ON DELETE SET NULL,
    purchase_date DATE,
    purchase_price DECIMAL(12,2),
    purchase_currency CHAR(3),
    current_value DECIMAL(12,2),
    current_value_currency CHAR(3),
    status VARCHAR(50) NOT NULL CHECK (status IN ('ACTIVE', 'ARCHIVED', 'SOLD', 'DISPOSED')),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at TIMESTAMP
);

-- 6. SUBSCRIPTION
CREATE TABLE subscription (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES "user"(id) ON DELETE CASCADE,
    asset_id BIGINT REFERENCES asset(id) ON DELETE SET NULL,
    name VARCHAR(255) NOT NULL,
    description TEXT,
    cost_per_cycle DECIMAL(12,2) NOT NULL,
    currency CHAR(3) NOT NULL,
    start_date DATE NOT NULL,
    next_renewal_date DATE,
    status VARCHAR(50) NOT NULL CHECK (status IN ('ACTIVE', 'PAUSED', 'CANCELLED')),
    cancelled_at TIMESTAMP,
    cancel_reason TEXT,
    recurrence_rule_id BIGINT REFERENCES recurrence_rule(id) ON DELETE SET NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at TIMESTAMP
);

-- 7. PAYMENT
CREATE TABLE payment (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES "user"(id) ON DELETE CASCADE,
    asset_id BIGINT REFERENCES asset(id) ON DELETE SET NULL,
    subscription_id BIGINT REFERENCES subscription(id) ON DELETE SET NULL,
    amount DECIMAL(12,2) NOT NULL,
    currency CHAR(3) NOT NULL,
    payment_date DATE,
    due_date DATE,
    category_id BIGINT REFERENCES category(id) ON DELETE SET NULL,
    description TEXT,
    status VARCHAR(50) NOT NULL CHECK (status IN ('PENDING', 'PAID', 'OVERDUE', 'FAILED')),
    is_recurring BOOLEAN NOT NULL DEFAULT FALSE,
    recurrence_rule_id BIGINT REFERENCES recurrence_rule(id) ON DELETE SET NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at TIMESTAMP
);

-- 8. DOCUMENT
CREATE TABLE document (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES "user"(id) ON DELETE CASCADE,
    asset_id BIGINT REFERENCES asset(id) ON DELETE SET NULL,
    payment_id BIGINT REFERENCES payment(id) ON DELETE SET NULL,
    subscription_id BIGINT REFERENCES subscription(id) ON DELETE SET NULL,
    name VARCHAR(255) NOT NULL,
    description TEXT,
    file_path VARCHAR(512) NOT NULL,
    file_type VARCHAR(100) NOT NULL,
    file_size BIGINT NOT NULL,
    expiration_date DATE,
    uploaded_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at TIMESTAMP
);

-- 9. NOTIFICATION
CREATE TABLE notification (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES "user"(id) ON DELETE CASCADE,
    type VARCHAR(50) NOT NULL CHECK (type IN ('PAYMENT_REMINDER', 'SUBSCRIPTION_RENEWAL', 'DOCUMENT_EXPIRATION', 'MAINTENANCE_REMINDER', 'SYSTEM')),
    title VARCHAR(255) NOT NULL,
    message TEXT NOT NULL,
    is_read BOOLEAN NOT NULL DEFAULT FALSE,
    read_at TIMESTAMP,
    trigger_date TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    reference_type VARCHAR(50) CHECK (reference_type IN ('ASSET', 'SUBSCRIPTION', 'PAYMENT', 'DOCUMENT')),
    reference_id BIGINT,
    channel VARCHAR(50) NOT NULL CHECK (channel IN ('IN_APP', 'EMAIL')),
    sent_at TIMESTAMP,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at TIMESTAMP
);

-- 10. NOTIFICATION PREFERENCE
CREATE TABLE notification_preference (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES "user"(id) ON DELETE CASCADE,
    notification_type VARCHAR(50) NOT NULL CHECK (notification_type IN ('PAYMENT_REMINDER', 'SUBSCRIPTION_RENEWAL', 'DOCUMENT_EXPIRATION', 'MAINTENANCE_REMINDER', 'SYSTEM')),
    enabled BOOLEAN NOT NULL DEFAULT TRUE,
    lead_time_days INT NOT NULL DEFAULT 0,
    channel VARCHAR(50) NOT NULL CHECK (channel IN ('IN_APP', 'EMAIL', 'BOTH')),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

-- 11. AUDIT LOG
CREATE TABLE audit_log (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    actor_id BIGINT REFERENCES "user"(id) ON DELETE SET NULL,
    action VARCHAR(100) NOT NULL,
    target_entity_type VARCHAR(50),
    target_entity_id BIGINT,
    details TEXT,
    ip_address VARCHAR(45),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

-- 12. JUNCTION TABLES
CREATE TABLE asset_tag (
    asset_id BIGINT NOT NULL REFERENCES asset(id) ON DELETE CASCADE,
    tag_id BIGINT NOT NULL REFERENCES tag(id) ON DELETE CASCADE,
    PRIMARY KEY (asset_id, tag_id)
);

CREATE TABLE subscription_tag (
    subscription_id BIGINT NOT NULL REFERENCES subscription(id) ON DELETE CASCADE,
    tag_id BIGINT NOT NULL REFERENCES tag(id) ON DELETE CASCADE,
    PRIMARY KEY (subscription_id, tag_id)
);

CREATE TABLE payment_tag (
    payment_id BIGINT NOT NULL REFERENCES payment(id) ON DELETE CASCADE,
    tag_id BIGINT NOT NULL REFERENCES tag(id) ON DELETE CASCADE,
    PRIMARY KEY (payment_id, tag_id)
);

-- Create Indexes for performance
CREATE INDEX idx_asset_user ON asset(user_id);
CREATE INDEX idx_subscription_user ON subscription(user_id);
CREATE INDEX idx_payment_user ON payment(user_id);
CREATE INDEX idx_document_user ON document(user_id);
CREATE INDEX idx_notification_user_unread ON notification(user_id, is_read);
